--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 		<form class="form-signin" th:action="@{/user/login}" method="post">
 			<img class="mb-4" th:src="@{/asserts/img/bootstrap-solid.svg}" alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal"th:text="#{login.tip}">Please sign in</h1>
-			<p th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
+			<p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
 			<label class="sr-only" th:text="#{login.username}">Username</label>
 			<input type="text" name="username" class="form-control" th:placeholder="#{login.username}" placeholder="Username" required="" autofocus="">
 			<label class="sr-only" th:text="#{login.password}">Password</label>
@@ -28,8 +28,8 @@
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{login.btn}">Sign in</button>
 			<p class="mt-5 mb-3 text-muted">© 2017-2018</p>
-			<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
-			<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
+			<a class="btn btn-sm" th:href="@{/templates/login.html(l='zh_CN')}">中文</a>
+			<a class="btn btn-sm" th:href="@{/templates/login.html(l='en_US')}">English</a>
 		</form>
 
 	</body>
